fluffy: fixed margin overflow. updated text.

--- a/fluffy.js/src/styles/styles.css
+++ b/fluffy.js/src/styles/styles.css
@@ -7,6 +7,7 @@
 
 html, body {
     height: 100%;
+    overflow: auto;
 }
 
 body {
@@ -49,7 +50,7 @@ p {
 }
 
 .list-dash {
-    margin: 0 20px;
+    margin: 2.5em 20px 0;
     padding-left: 0;
     list-style-type: none;
 }
